--- a/JobSeekingSystem/src/RegisterGUI.form
+++ b/JobSeekingSystem/src/RegisterGUI.form
@@ -56,7 +56,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="d1d38" class="javax.swing.JTextField" binding="usernameTextTextField" default-binding="true">
+      <component id="d1d38" class="javax.swing.JTextField" binding="usernameTextField" default-binding="true">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
