--- a/JobSeekingSystem/src/ErrorGUI.form
+++ b/JobSeekingSystem/src/ErrorGUI.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ErrorGUI">
-  <grid id="27dc6" binding="errorTitle" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="errorPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none" title="ERROR"/>
     <children>
-      <component id="59340" class="javax.swing.JLabel" binding="errorMessage">
+      <component id="59340" class="javax.swing.JLabel" binding="messageLabel">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -29,7 +29,7 @@
           <text value="OK"/>
         </properties>
       </component>
-      <component id="d4951" class="javax.swing.JLabel" binding="errorDetails">
+      <component id="d4951" class="javax.swing.JLabel" binding="detailsLabel">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
