--- a/JobSeekingSystem/src/Register.form
+++ b/JobSeekingSystem/src/Register.form
@@ -67,7 +67,7 @@
           <text value="Username"/>
         </properties>
       </component>
-      <component id="6c989" class="javax.swing.JPasswordField" binding="passwordField1" default-binding="true">
+      <component id="6c989" class="javax.swing.JPasswordField" binding="password">
         <constraints>
           <grid row="18" column="2" row-span="1" col-span="6" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -76,7 +76,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="c915e" class="javax.swing.JPasswordField" binding="usernamePasswordField" default-binding="true">
+      <component id="c915e" class="javax.swing.JPasswordField" binding="userName">
         <constraints>
           <grid row="14" column="2" row-span="1" col-span="6" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -133,7 +133,7 @@
           <text value="Recruiter"/>
         </properties>
       </component>
-      <component id="f6de3" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+      <component id="f6de3" class="javax.swing.JTextField" binding="firstName">
         <constraints>
           <grid row="10" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -151,7 +151,7 @@
           <text value="Last name"/>
         </properties>
       </component>
-      <component id="2d9aa" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+      <component id="2d9aa" class="javax.swing.JTextField" binding="lastName">
         <constraints>
           <grid row="10" column="5" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -200,16 +200,6 @@
           <forms defaultalign-horz="false"/>
         </constraints>
       </hspacer>
-      <grid id="1fedd" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-          <forms/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children/>
-      </grid>
     </children>
   </grid>
 </form>
