--- a/JSS/RegisterGUI.form
+++ b/JSS/RegisterGUI.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="registerPanel" layout-manager="GridLayoutManager" row-count="22" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="100" left="100" bottom="100" right="100"/>
     <constraints>
-      <xy x="20" y="20" width="658" height="790"/>
+      <xy x="20" y="20" width="658" height="786"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -212,9 +212,7 @@
       </hspacer>
       <hspacer id="5e3c4">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="3" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="14" height="18"/>
-          </grid>
+          <grid row="4" column="1" row-span="1" col-span="3" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
       <hspacer id="aa4d3">
