--- a/JobSeekingSystem/src/RecruiterHomeGUI.form
+++ b/JobSeekingSystem/src/RecruiterHomeGUI.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="HomeGUI">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="RecruiterHomeGUI">
   <grid id="27dc6" binding="recruiterHome" layout-manager="GridLayoutManager" row-count="7" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="719" height="562"/>
+      <xy x="20" y="20" width="776" height="562"/>
     </constraints>
     <properties>
       <background color="-855051"/>
@@ -11,6 +11,7 @@
       <font name="Courier New" size="20" style="1"/>
       <foreground color="-9765391"/>
       <name value=""/>
+      <preferredSize width="856" height="600"/>
       <toolTipText value=""/>
     </properties>
     <border type="none">
@@ -95,7 +96,7 @@
       </grid>
       <component id="99a17" class="javax.swing.JLabel" binding="yourJobLabel">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="Consolas" size="22" style="1"/>
@@ -116,7 +117,7 @@
         <children>
           <component id="495e2" class="javax.swing.JLabel" binding="jobTitle">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Job Title"/>
@@ -204,7 +205,7 @@
         <children>
           <component id="ed0f2" class="javax.swing.JLabel" binding="jobTitle2">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Job Title"/>
@@ -289,6 +290,7 @@
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Courier New" size="28"/>
           <text value="Welcome User!"/>
         </properties>
       </component>
