--- a/JobSeekingSystem/src/RegisterGUI.form
+++ b/JobSeekingSystem/src/RegisterGUI.form
@@ -82,7 +82,7 @@
         <properties>
           <background color="-16745473"/>
           <font size="12" style="1"/>
-          <foreground color="-16382458"/>
+          <foreground color="-1"/>
           <text value="Register"/>
         </properties>
       </component>
@@ -99,8 +99,8 @@
           <grid row="20" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-16382458"/>
-          <foreground color="-16382458"/>
+          <background color="-1"/>
+          <foreground color="-16745473"/>
           <text value="Login"/>
         </properties>
       </component>
