--- a/JobSeekingSystem/src/CreateJobGUI.form
+++ b/JobSeekingSystem/src/CreateJobGUI.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="CreateJobGUI">
-  <grid id="27dc6" binding="createJobPanel" layout-manager="GridLayoutManager" row-count="29" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="createJobPanel" layout-manager="GridLayoutManager" row-count="30" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="20" left="100" bottom="20" right="100"/>
     <constraints>
-      <xy x="20" y="20" width="627" height="1176"/>
+      <xy x="20" y="20" width="627" height="1211"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -47,7 +47,7 @@
       </component>
       <component id="1cd32" class="javax.swing.JTextField" binding="jobTitleText">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="7" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -98,7 +98,7 @@
       </component>
       <component id="2ee95" class="javax.swing.JComboBox" binding="jobTypeMenu">
         <constraints>
-          <grid row="10" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="10" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="-1"/>
           </grid>
         </constraints>
@@ -122,7 +122,7 @@
       </component>
       <component id="66155" class="javax.swing.JTextField" binding="salaryText">
         <constraints>
-          <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="225" height="30"/>
           </grid>
         </constraints>
@@ -148,21 +148,15 @@
           <text value="Skills"/>
         </properties>
       </component>
-      <component id="cc051" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+      <component id="cc051" class="javax.swing.JComboBox" binding="skillsMenu">
         <constraints>
-          <grid row="14" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="14" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
+            <maximum-size width="150" height="-1"/>
           </grid>
         </constraints>
         <properties>
-          <model>
-            <item value="insert"/>
-            <item value="list"/>
-            <item value="from"/>
-            <item value="skills"/>
-            <item value="text"/>
-            <item value="file"/>
-          </model>
+          <model/>
         </properties>
       </component>
       <component id="437ba" class="javax.swing.JList" binding="skillsList">
@@ -172,14 +166,7 @@
           </grid>
         </constraints>
         <properties>
-          <model>
-            <item value="connect skill"/>
-            <item value="using"/>
-            <item value="add skill button"/>
-            <item value="remove skill"/>
-            <item value="using"/>
-            <item value="remove skill button"/>
-          </model>
+          <model/>
         </properties>
       </component>
       <component id="fa8b0" class="javax.swing.JButton" binding="addSkillButton">
@@ -209,19 +196,12 @@
       </component>
       <component id="e371f" class="javax.swing.JComboBox" binding="keywordsMenu">
         <constraints>
-          <grid row="17" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="17" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
         <properties>
-          <model>
-            <item value="insert"/>
-            <item value="from"/>
-            <item value="keywords"/>
-            <item value="list"/>
-            <item value="text"/>
-            <item value="file"/>
-          </model>
+          <model/>
         </properties>
       </component>
       <component id="a21ba" class="javax.swing.JList" binding="keywordsList">
@@ -231,14 +211,7 @@
           </grid>
         </constraints>
         <properties>
-          <model>
-            <item value="keyword 1"/>
-            <item value="keyword 2"/>
-            <item value="keyword 3"/>
-            <item value="add keyword from text"/>
-            <item value="remove with"/>
-            <item value="remove button"/>
-          </model>
+          <model/>
         </properties>
       </component>
       <component id="4437c" class="javax.swing.JButton" binding="addKeywordsButton">
@@ -268,7 +241,7 @@
       </component>
       <component id="109c" class="javax.swing.JComboBox" binding="locationStateMenu">
         <constraints>
-          <grid row="20" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="20" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -314,7 +287,7 @@
       </component>
       <component id="d4e9d" class="javax.swing.JFormattedTextField" binding="descriptionText">
         <constraints>
-          <grid row="22" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="22" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="7" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="100"/>
           </grid>
         </constraints>
@@ -340,7 +313,7 @@
       </component>
       <component id="c74e9" class="javax.swing.JComboBox" binding="categoryMenuPrimary">
         <constraints>
-          <grid row="24" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="24" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <model>
@@ -377,7 +350,7 @@
       </component>
       <component id="61b02" class="javax.swing.JTextField" binding="hoursText">
         <constraints>
-          <grid row="26" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="26" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="100" height="-1"/>
           </grid>
         </constraints>
@@ -405,7 +378,7 @@
       </component>
       <component id="4bff" class="javax.swing.JComboBox" binding="statusMenu">
         <constraints>
-          <grid row="28" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="28" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <model>
@@ -421,6 +394,14 @@
         </constraints>
         <properties>
           <text value="/error if &gt;0 apps (changing to draft)"/>
+        </properties>
+      </component>
+      <component id="589" class="javax.swing.JButton" binding="submitButton">
+        <constraints>
+          <grid row="29" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Submit"/>
         </properties>
       </component>
     </children>
