--- a/JobSeekingSystem/src/RegisterGUI.form
+++ b/JobSeekingSystem/src/RegisterGUI.form
@@ -227,6 +227,14 @@
           <grid row="12" column="1" row-span="1" col-span="3" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
+      <component id="4656e" class="javax.swing.JRadioButton" binding="radioButtonAdmin">
+        <constraints>
+          <grid row="16" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Admin"/>
+        </properties>
+      </component>
     </children>
   </grid>
   <buttonGroups>
