implement add skills lists to edit user profile

--- a/JobSeekingSystem/src/RegisterGUI.form
+++ b/JobSeekingSystem/src/RegisterGUI.form
@@ -241,6 +241,9 @@
     <group name="accountType">
       <member id="13a5d"/>
       <member id="841ff"/>
+      <member id="4656e"/>
+      <member id="13a5d"/>
+      <member id="841ff"/>
     </group>
   </buttonGroups>
 </form>
