--- a/JobSeekingSystem/src/PromptGUI.form
+++ b/JobSeekingSystem/src/PromptGUI.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="promptPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="100" left="100" bottom="150" right="150"/>
     <constraints>
-      <xy x="29" y="20" width="563" height="376"/>
+      <xy x="29" y="20" width="563" height="383"/>
     </constraints>
     <properties/>
     <border type="none" title="ALERT"/>
@@ -13,6 +13,7 @@
           <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font size="20" style="1"/>
           <text value=""/>
         </properties>
       </component>
